// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Table /> Default story renders snapshot 1`] = `
<table
  class="table"
>
  <thead>
    <tr
      class="table-row table-row--header"
    >
      <th
        class="table-header-cell"
      >
        <div
          class="text text--label-sm table-header-cell__container"
        >
          Name
        </div>
      </th>
      <th
        class="table-header-cell"
      >
        <div
          class="text text--label-sm table-header-cell__container"
        >
          Status
        </div>
      </th>
      <th
        class="table-header-cell"
      >
        <div
          class="text text--label-sm table-header-cell__container"
        >
          Chart
        </div>
      </th>
      <th
        class="table-header-cell"
      >
        <div
          class="text text--label-sm table-header-cell__container"
        >
          Window
        </div>
      </th>
      <th
        class="table-header-cell"
      >
        <div
          class="text text--label-sm table-header-cell__container"
        >
          Last Update
        </div>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      class="table-row"
    >
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 1, Table Cell 1
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 1, Table Cell 2
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 1, Table Cell 3
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 1, Table Cell 4
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 1, Table Cell 5
        </p>
      </td>
    </tr>
    <tr
      class="table-row"
    >
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 2, Table Cell 1
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 2, Table Cell 2
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 2, Table Cell 3
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 2, Table Cell 4
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 2, Table Cell 5
        </p>
      </td>
    </tr>
    <tr
      class="table-row"
    >
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 3, Table Cell 1
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 3, Table Cell 2
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 3, Table Cell 3
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 3, Table Cell 4
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 3, Table Cell 5
        </p>
      </td>
    </tr>
    <tr
      class="table-row"
    >
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 4, Table Cell 1
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 4, Table Cell 2
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 4, Table Cell 3
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 4, Table Cell 4
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 4, Table Cell 5
        </p>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<Table /> SortableInteractive story renders snapshot 1`] = `
<table
  class="table"
>
  <thead>
    <tr
      class="table-row table-row--header"
    >
      <th
        class="table-header-cell"
      >
        <div
          class="text text--label-sm table-header-cell__container"
        >
          Sortable
          <button
            class="button button--layout-icon-only button--tertiary button--sm button--size-sm button--variant-default"
            title="Sort"
            type="button"
          >
            <span
              class="text text--label-sm button__text"
            >
              <svg
                aria-hidden="true"
                class="icon"
                fill="currentColor"
                height="1rem"
                style="--icon-size: 1rem;"
                viewBox="0 0 24 24"
                width="1rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 5.83l2.46 2.46c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L12.7 3.7c-.39-.39-1.02-.39-1.41 0L8.12 6.88c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 5.83zm0 12.34l-2.46-2.46c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l3.17 3.18c.39.39 1.02.39 1.41 0l3.17-3.17c.39-.39.39-1.02 0-1.41-.39-.39-1.02-.39-1.41 0L12 18.17z"
                />
              </svg>
            </span>
          </button>
        </div>
      </th>
      <th
        class="table-header-cell"
      >
        <div
          class="text text--label-sm table-header-cell__container"
        >
          Not sortable
        </div>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      class="table-row"
    >
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Value 1
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Value A
        </p>
      </td>
    </tr>
    <tr
      class="table-row"
    >
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Value 3
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Value B
        </p>
      </td>
    </tr>
    <tr
      class="table-row"
    >
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Value 2
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Value C
        </p>
      </td>
    </tr>
    <tr
      class="table-row"
    >
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Value 4
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Value D
        </p>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<Table /> StackedCardsExample story renders snapshot 1`] = `
<div>
  <table
    class="table"
  >
    <thead>
      <tr
        class="table-row table-row--header"
      >
        <th
          class="table-header-cell"
        >
          <div
            class="text text--label-sm table-header-cell__container"
          >
            Students
          </div>
        </th>
        <th
          class="table-header-cell"
        >
          <div
            class="text text--label-sm table-header-cell__container"
          >
            Status
          </div>
        </th>
        <th
          class="table-header-cell"
        >
          <div
            class="text text--label-sm table-header-cell__container"
          >
            Cog skill
          </div>
        </th>
        <th
          class="table-header-cell"
        >
          <div
            class="text text--label-sm table-header-cell__container"
          >
            Time submitted
          </div>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="table-row"
      >
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            Araya, Raquel
          </p>
        </td>
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            Stop and Revise
          </p>
        </td>
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            3
          </p>
        </td>
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            2 hours ago
          </p>
        </td>
      </tr>
      <tr
        class="table-row"
      >
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            Jesse Banet
          </p>
        </td>
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            Stop and Revise
          </p>
        </td>
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            1
          </p>
        </td>
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            3 days ago
          </p>
        </td>
      </tr>
      <tr
        class="table-row"
      >
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            Julie Davis
          </p>
        </td>
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            Working
          </p>
        </td>
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            0
          </p>
        </td>
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            3 days ago
          </p>
        </td>
      </tr>
      <tr
        class="table-row"
      >
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            Hussain, Adnan
          </p>
        </td>
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            Review Feedback
          </p>
        </td>
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            0
          </p>
        </td>
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            3 days ago
          </p>
        </td>
      </tr>
      <tr
        class="table-row"
      >
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            Ilango, Megha
          </p>
        </td>
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            Needs Feedback
          </p>
        </td>
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            3
          </p>
        </td>
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            3 days ago
          </p>
        </td>
      </tr>
      <tr
        class="table-row"
      >
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            Jaffer, Arman
          </p>
        </td>
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            Needs Feedback
          </p>
        </td>
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            1
          </p>
        </td>
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            3 days ago
          </p>
        </td>
      </tr>
      <tr
        class="table-row"
      >
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            Kang, Michelle
          </p>
        </td>
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            Review Feedback
          </p>
        </td>
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            1
          </p>
        </td>
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            3 days ago
          </p>
        </td>
      </tr>
      <tr
        class="table-row"
      >
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            Lewine, Chris
          </p>
        </td>
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            Continue Working
          </p>
        </td>
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            2
          </p>
        </td>
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            3 days ago
          </p>
        </td>
      </tr>
      <tr
        class="table-row"
      >
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            Luo, Celia
          </p>
        </td>
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            Review Feedback
          </p>
        </td>
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            1
          </p>
        </td>
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            3 days ago
          </p>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<Table /> TableWithCaption story renders snapshot 1`] = `
<table
  class="table"
>
  <caption>
    Optional caption for the table. Must be first descendant of Table if used.
  </caption>
  <thead>
    <tr
      class="table-row table-row--header"
    >
      <th
        class="table-header-cell"
      >
        <div
          class="text text--label-sm table-header-cell__container"
        >
          Name
        </div>
      </th>
      <th
        class="table-header-cell"
      >
        <div
          class="text text--label-sm table-header-cell__container"
        >
          Status
        </div>
      </th>
      <th
        class="table-header-cell"
      >
        <div
          class="text text--label-sm table-header-cell__container"
        >
          Chart
        </div>
      </th>
      <th
        class="table-header-cell"
      >
        <div
          class="text text--label-sm table-header-cell__container"
        >
          Window
        </div>
      </th>
      <th
        class="table-header-cell"
      >
        <div
          class="text text--label-sm table-header-cell__container"
        >
          Last Update
        </div>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      class="table-row"
    >
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 1, Table Cell 1
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 1, Table Cell 2
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 1, Table Cell 3
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 1, Table Cell 4
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 1, Table Cell 5
        </p>
      </td>
    </tr>
    <tr
      class="table-row"
    >
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 2, Table Cell 1
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 2, Table Cell 2
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 2, Table Cell 3
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 2, Table Cell 4
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 2, Table Cell 5
        </p>
      </td>
    </tr>
    <tr
      class="table-row"
    >
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 3, Table Cell 1
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 3, Table Cell 2
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 3, Table Cell 3
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 3, Table Cell 4
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 3, Table Cell 5
        </p>
      </td>
    </tr>
    <tr
      class="table-row"
    >
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 4, Table Cell 1
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 4, Table Cell 2
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 4, Table Cell 3
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 4, Table Cell 4
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 4, Table Cell 5
        </p>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<Table /> TableWithStyledHeader story renders snapshot 1`] = `
<table
  class="table"
>
  <caption>
    Optional caption for the table. Must be first descendant of Table if used.
  </caption>
  <thead>
    <tr
      class="table-row table-row--header"
    >
      <th
        class="table-header-cell"
      >
        <div
          class="text text--label-sm table-header-cell__container"
        >
          <em>
            Name
          </em>
        </div>
      </th>
      <th
        class="table-header-cell"
      >
        <div
          class="text text--label-sm table-header-cell__container"
        >
          <em>
            Status
          </em>
        </div>
      </th>
      <th
        class="table-header-cell"
      >
        <div
          class="text text--label-sm table-header-cell__container"
        >
          <em>
            Chart
          </em>
        </div>
      </th>
      <th
        class="table-header-cell"
      >
        <div
          class="text text--label-sm table-header-cell__container"
        >
          <em>
            Window
          </em>
        </div>
      </th>
      <th
        class="table-header-cell"
      >
        <div
          class="text text--label-sm table-header-cell__container"
        >
          <em>
            Last Update
          </em>
        </div>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      class="table-row"
    >
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 1, Table Cell 1
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 1, Table Cell 2
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 1, Table Cell 3
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 1, Table Cell 4
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 1, Table Cell 5
        </p>
      </td>
    </tr>
    <tr
      class="table-row"
    >
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 2, Table Cell 1
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 2, Table Cell 2
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 2, Table Cell 3
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 2, Table Cell 4
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 2, Table Cell 5
        </p>
      </td>
    </tr>
    <tr
      class="table-row"
    >
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 3, Table Cell 1
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 3, Table Cell 2
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 3, Table Cell 3
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 3, Table Cell 4
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 3, Table Cell 5
        </p>
      </td>
    </tr>
    <tr
      class="table-row"
    >
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 4, Table Cell 1
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 4, Table Cell 2
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 4, Table Cell 3
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 4, Table Cell 4
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 4, Table Cell 5
        </p>
      </td>
    </tr>
  </tbody>
</table>
`;
